Added mahout and pig scripts for clustering analysis
commit 502e793faefca4e4d2447f4c6ffce6207d8a25b8
Author: Telvis Calhoun <telvis07@gmail.com>
Date:   Wed Mar 27 21:00:51 2013 -0400

    add mvn command to README

commit f907fac8c95a87279ed704fde808786b33321df8
Author: Telvis Calhoun <telvis07@gmail.com>
Date:   Wed Mar 27 20:59:48 2013 -0400

    minor changes

commit 00f3692bb87254bbaa2024c822fc293584640cde
Author: Telvis Calhoun <telvis07@gmail.com>
Date:   Tue Mar 26 06:06:24 2013 -0400

    fixed typo

commit 6a88eae12ca45786102d51426e0249e65ada6af1
Author: Telvis Calhoun <telvis07@gmail.com>
Date:   Tue Mar 26 06:02:45 2013 -0400

    fixed indentation

commit fa152fed54b4bad8b193be60687c34c3973c541f
Author: Telvis Calhoun <telvis07@gmail.com>
Date:   Tue Mar 26 05:55:05 2013 -0400

    pom cleanup

commit 7eb4c7b8dc28948f1beb612bab91633ae2766cbf
Author: Telvis Calhoun <telvis07@gmail.com>
Date:   Tue Mar 26 05:53:22 2013 -0400

    changed version num for elephant-bird-vector-converter

commit 79a7dd882feb486057bd45943d85e02bbdc9123e
Author: Telvis Calhoun <telvis07@gmail.com>
Date:   Tue Mar 26 05:47:33 2013 -0400

    minore README update

commit 05e280809bcffddcff23cef3a88c9467d5f219ec
Author: Telvis Calhoun <telvis07@gmail.com>
Date:   Tue Mar 26 05:42:19 2013 -0400

    added elephant-bird-vector-converter generate namedVectors

commit 52ccf55f720e1cf7ee17f13454e12411d5f75300
Author: Telvis Calhoun <telvis07@gmail.com>
Date:   Sun Mar 24 20:20:12 2013 -0400

    moved test scripts to testing

commit 0a8891407be0afb8de962b68b877479999c29d7d
Author: Telvis Calhoun <telvis07@gmail.com>
Date:   Sun Mar 24 20:19:14 2013 -0400

    more README fixes

commit acd53e73f0313a4f70316bb4450086e06d25e531
Author: Telvis Calhoun <telvis07@gmail.com>
Date:   Sun Mar 24 19:58:02 2013 -0400

    added README. added mahout dictionary files for clusterdump

commit 3bf478bbaf0be3fe45a04b66a1b1b54d765918a1
Author: Telvis Calhoun <telvis07@gmail.com>
Date:   Sat Mar 23 06:06

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 /find_all_scriptures.py
 *.properties
 build/
+analysis/output
+*~
+*.class
+
 
 #django static files
 static/
@@ -68,7 +72,7 @@ bin/virtualenv
 local
 /lib/
 
-java/habakkuk-core/classes/
-java/habakkuk-core/target/
-java/habakkuk-core/lib/
+java/*/classes/
+java/*/target/
+java/*/lib/
 *.jar
