--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-Django==1.4
-pyes==0.19.1
-thrift==0.9.0
-jsonlib2==1.5.2
 Fabric==1.8.0
+Django==1.5.1
+MySQL-python==1.2.3
+South==0.8.2
+importlib==1.0.2
+jsonlib2==1.5.2
+pyes==0.20.1
+requests==1.1.0
+thrift==0.9.1
+urllib3==1.6
