--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
-Fabric==1.8.0
 Django==1.5.1
+Fabric==1.8.0
 MySQL-python==1.2.3
 South==0.8.2
+dj-database-url==0.2.2
+dj-static==0.0.5
+django-toolbelt==0.0.1
+ecdsa==0.9
+gunicorn==18.0
 importlib==1.0.2
 jsonlib2==1.5.2
+paramiko==1.12.0
+psycopg2==2.5.1
+pycrypto==2.6.1
 pyes==0.20.1
 requests==1.1.0
+static==0.4
 thrift==0.9.1
 urllib3==1.6
+wsgiref==0.1.2
