--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-Django==1.7.1
-Fabric==1.8.0
-South==0.8.2
-dj-database-url==0.2.2
-dj-static==0.0.6
-django-toolbelt==0.0.1
-ecdsa==0.9
-gunicorn==18.0
-jsonlib2==1.5.2
-paramiko==1.12.0
-psycopg2==2.5.1
-pycrypto==2.6.1
-requests==2.5.0
-static==0.4
-thrift==0.9.1
-wsgiref==0.1.2
-django-jenkins==0.14.1
-coverage==3.7.1
-pyes==0.99.4
-urllib3==1.9
+Django>=1.7.1
+Fabric>=1.8.0
+South>=0.8.2
+dj-database-url>=0.2.2
+dj-static>=0.0.6
+django-toolbelt>=0.0.1
+ecdsa>=0.9
+gunicorn>=18.0
+jsonlib2>=1.5.2
+paramiko>=1.12.0
+psycopg2>=2.5.1
+pycrypto>=2.6.1
+requests>=2.5.0
+static>=0.4
+thrift>=0.9.1
+wsgiref>=0.1.2
+django-jenkins>=0.14.1
+coverage>=3.7.1
+pyes>=0.99.4
+urllib3>=1.9
